Filling out account specs

--- a/spec/fixtures/accounts_api.yml
+++ b/spec/fixtures/accounts_api.yml
@@ -91,18 +91,18 @@ MashalSaif: !ruby/object:Etapper::API::Account
   address: 852 Louise Circle
   city: Durham
   country: US
-  county: 
+  county: Raleigh
   donorRecognitionName: 
   donorRecognitionType: 0
   donorRoleRef: 4310.0.2276679
   email: mashalsaif@gmail.com
-  firstName: 
+  firstName: Mashal
   id: 18618
-  lastName: 
+  lastName: Saif
   longSalutation: Ms. Saif
-  middleName: 
+  middleName: L.
   name: Mashal Saif
-  note: 
+  note: (test note)
   personaCreatedDate: 2007-10-05T16:00:00+00:00
   personaDefinedValues: !seq:Etapper::API::ArrayOfDefinedValue 
     - !ruby/object:Etapper::API::DefinedValue 
@@ -132,8 +132,17 @@ MashalSaif: !ruby/object:Etapper::API::Account
     - Business
   phones: !seq:Etapper::API::ArrayOfPhone 
     - !ruby/object:Etapper::API::Phone 
-      number: 845-380-6725
+      number: 555-222-3333
       type: Home
+    - !ruby/object:Etapper::API::Phone 
+      number: 555-777-8888
+      type: Business
+    - !ruby/object:Etapper::API::Phone 
+      number: 555-321-5432
+      type: Mobile
+    - !ruby/object:Etapper::API::Phone 
+      number: 555-987-6543
+      type: Fax
   postalCode: "27705"
   primaryPersona: true
   ref: 4310.0.2276679
@@ -141,10 +150,10 @@ MashalSaif: !ruby/object:Etapper::API::Account
   sortName: Saif, Mashal
   state: NC
   teamRoleRef: 
-  title: 
+  title: Ms.
   tributeRoleRef: 
   userRoleRef: 
-  webAddress: 
+  webAddress: http://yahoo.com
 SteveEley: !ruby/object:Etapper::API::Account 
   accountCreatedDate: 2008-09-24T16:00:00+00:00
   accountDefinedValues: !seq:Etapper::API::ArrayOfDefinedValue 
