Gifts collection by account

--- a/spec/fixtures/gifts_api.yml
+++ b/spec/fixtures/gifts_api.yml
@@ -1,4 +1,4 @@
----
+--- !ruby/object:Etapper::API::PagedJournalEntriesResponse 
 count: 5
 data: !seq:Etapper::API::ArrayOfanyType 
   - !ruby/object:Etapper::API::Gift 
